# video_mamba_ssm

./: .gitignore  README.md  notes.md  notes.txt  pyproject.toml  requirements.txt  todo.md  todo_legacy.md  tofix.txt  video_depth_inference.py
UniDepth/: README.md  hubconf.py  requirements.txt
UniDepth/scripts/: demo.py  train.py
UniDepth/unidepth/layers/: nystrom_attention.py
UniDepth/unidepth/ops/knn/: setup.py  (+1 more)
UniDepth/unidepth/utils/: camera.py
docs/: video_depth_anything_v2_videos.tex  video_mamab_depth.tex  video_mamba_ssm_strategy.tex
docs/unidepth/: main.bbl  main.tex  refs.bib
docs/unidepth/figures/: 0_teaser.tex  1_overview.tex  2_comparison.tex  3_shape_invariance.tex  4_confidence.tex  5_edges.tex
docs/unidepth/sections/: 0_abstract.tex  1_introduction.tex  2_rel_work.tex  3_method.tex  4_experiments.tex  5_conclusion.tex
docs/unidepth/tables/: 1a_results_in.tex  1b_results_out.tex  2_finetune_nyu.tex  3_finetune_kitti.tex  4_v1_to_v2.tex  5_ablations.tex
docs/video_depth_anything_long_videos/: 00README.json  PaperForReview.bbl  PaperForReview.tex  egbib.bib
scripts/: baseline_temporal_filters.py  benchmark_unidepth_inprocess.py  calibrate_uncertainty.py  dataset_video.py  debug_window_sample.py  precompute_unidepth_depth.py  train_refiner_stub.py  video_depth_inference.py  visualize_depth.py  visualize_depth_uncertainty_video.py  visualize_depth_video.py
scripts/data_prep/: improved_hypersim_download.py  prepare_hypersim_unidepth.py  requirements.txt
scripts/models/: temporal_refiner.py
scripts/training_utils/: temporal_helpers.py
(+36 files in other folders)
