[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unidepth-video"
version = "0.1.0"
description = "Temporal residual refiner for UniDepth video depth (VR ready)"
authors = [{ name = "VR Depth Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch==2.9.1+cu130",
  "torchvision==0.24.1+cu130",
  "torchaudio==2.9.1+cu130",
  "einops>=0.7.0",
  "numpy>=2.0.0",
  "tqdm",
  "opencv-python",
  "pillow-simd==9.5.0.post2",
  "mamba-ssm>=1.2.0",
  "triton>=2.4.0",
  "lpips==0.1.4",
  "imageio",
  "av>=10.0.0",
  "pandas",
  "tabulate",
  "termcolor",
  "requests>=2.28.0",
  "packaging>=24.2",
  "matplotlib",
  "gradio",
  "huggingface-hub>=0.22.0",
  "protobuf>=4.25.3",
  "scipy",
  "tables",
  "trimesh",
  "wandb",
  "timm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
unidepth-train-refiner = "unidepth_video.cli.train_refiner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
